Removed transitive dependencies, exposed method to retry undelivered messages, and supported auto disconnect/reconnect on background/foreground event